<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.new_meeting.NewMeetingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/new_meeting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.80" />

        <TextView
            android:id="@+id/new_meeting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/new_meeting_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/new_meeting_title_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/new_meeting_title_hint"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/new_meeting_title" />

        <TextView
            android:id="@+id/new_meeting_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/new_meeting_date"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/new_meeting_title_field" />

        <EditText
            android:id="@+id/new_meeting_date_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/new_meeting_date_field"
            android:inputType="date"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/new_meeting_date" />

        <TextView
            android:id="@+id/new_meeting_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/new_meeting_start_time"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/new_meeting_date_field" />

        <EditText
            android:id="@+id/new_meeting_start_time_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/new_meeting_time_field"
            android:inputType="time"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/new_meeting_start_time" />

        <TextView
            android:id="@+id/new_meeting_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/new_meeting_end_time"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/new_meeting_start_time_field" />

        <EditText
            android:id="@+id/new_meeting_end_time_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/new_meeting_time_field"
            android:inputType="time"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/new_meeting_end_time" />

        <TextView
            android:id="@+id/new_meeting_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/new_meeting_room"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/new_meeting_end_time_field" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/new_meeting_room_spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:entries="@array/spinner_rooms"
            android:gravity="center_horizontal"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/new_meeting_room" />

        <TextView
            android:id="@+id/new_meeting_attendees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/new_meeting_attendees"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/new_meeting_room_spinner" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/new_meeting_attendees" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/new_meeting_new_attendee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:background="@android:color/transparent"
            android:hint="@string/new_meeting_attendee"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/chipGroup" />


        <ImageButton
            android:id="@+id/new_meeting_add_attendee"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:elevation="5dp"
            android:src="@drawable/ic_add_attendee"
            app:layout_constraintBottom_toBottomOf="@id/new_meeting_new_attendee"
            app:layout_constraintStart_toEndOf="@id/new_meeting_new_attendee"
            app:layout_constraintTop_toTopOf="@id/new_meeting_new_attendee" />

        <Button
            android:id="@+id/new_meeting_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue"
            android:text="@string/meeting_creation"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/new_meeting_new_attendee" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>