...
    android:layout_margin="10dp"
    android:orientation="horizontal"
    tools:context=".ui.list.MeetingListActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/meeting_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_layout" />
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_down_arrow"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/list_fab_create_meeting"
        app:layout_constraintStart_toStartOf="@id/list_fab_create_meeting" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/list_fab_create_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
